Changed email body fields to fixed width. Implemented floating popup notifications for the forms and a "Saved" message. Fixed email body handling to not destroy contiguous white space. Tweaked the theme a bit.
git-svn-id: https://vllasku.svn.sourceforge.net/svnroot/vllasku/trunk@274 893e5d92-dae6-4f76-a1ff-a647e29d1ad7

--- a/css/style.css
+++ b/css/style.css
@@ -366,6 +366,7 @@ textarea.xlarge {
 textarea.email_body {
   height: 200px;
   width: 500px;
+  font-family: Monaco, "Lucida Console", "Courier New", Courier, monospace;
 }
 
 div.iform {
@@ -438,3 +439,12 @@ img.image {
   padding: 4px;
 }
 
+.ui-floating-message {
+  display: table; 
+}
+
+.ui-floating-message div {
+  text-align: center;
+  display: table-cell; 
+  vertical-align: middle;
+}
